--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h4 {
 
 .indifferent {
   background-color: #dddd22;
-  box-shadow:  -1px 1px #22aa44, -2px 2px #22aa44, -3px 3px #22aa44, -4px 4px #22aa44, -5px 5px #22aa44;
+  box-shadow:  -1px 1px #ffff99, -2px 2px #ffff99, -3px 3px #ffff99, -4px 4px #ffff99, -5px 5px #ffff99;
 }
 
 .dubious {
